[project]
name = "cash-control"
version = "0.1.0"
description = ""
authors = [
    {name = "Danylo Miranda",email = "danylo.s.miranda@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.135.2,<0.136.0)",
    "uvicorn (>=0.42.0,<0.43.0)",
    "sqlalchemy (>=2.0.48,<3.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "alembic = ("^1.13")",
    "python-dotenv = ("^1.0")",
    "passlib = ("^1.7")"
]

[tool.poetry]
packages = [{include = "cash_control", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)"
]
