[project]
name = "cash-control"
version = "0.1.0"
description = ""
authors = [
    {name = "Danylo Miranda",email = "danylo.s.miranda@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.2,<0.136.0",
    "uvicorn>=0.42.0,<0.43.0",
    "sqlalchemy>=2.0.48,<3.0.0",
    "psycopg2-binary>=2.9.11,<3.0.0",
    "python-dotenv>=1.2.2",
    "passlib>=1.7.4",
    "alembic>=1.18.4",
    "email-validator (>=2.3.0,<3.0.0)",
    "pydantic[email] (>=2.12.5,<3.0.0)",
    "bcrypt (==3.2.2)"
]

[tool.poetry]
packages = [{include = "cash_control", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)"
]
